# combine_text_with_other_features_for_categorisation

./: main.py  pyproject.toml
scripts/: fine_tune_distilbert.py  light_gbm_classification.py
src/: feature_engineer.py  hugging_face_estimator.py  light_gbm_model.py  parameters.py  text_tokenizer.py
