[project]
name = "combine-text-with-other-features-for-categorisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.4.1",
    "lightgbm==4.6.0",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "torch==2.6.0",
    "transformers==4.49.0",
]
